# notiq

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml  release.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml  schema.sql
core/src/: error.rs  lib.rs  models.rs
core/src/models/: attachment.rs  daily_note.rs  favorite.rs  link.rs  note.rs  outline_node.rs  tag.rs  task_log.rs
core/src/storage/: attachment_repository.rs  daily_note_repository.rs  database.rs  favorite_repository.rs  link_repository.rs  mod.rs  node_repository.rs  note_repository.rs  tag_repository.rs  task_log_repository.rs
examples/: basic_usage.rs
tui/: Cargo.toml
tui/src/: app.rs  config.rs  event.rs  lib.rs  ui.rs
tui/src/ui/: layout.rs  widgets.rs
