[package]
name = "notiq-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
pulldown-cmark = { workspace = true }
walkdir = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = "3.8"

[[example]]
name = "basic_usage"
path = "../examples/basic_usage.rs"
