[package]
name = "notiq-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
notiq-core = { path = "../core" }
ratatui = { workspace = true }
crossterm = { workspace = true }
anyhow = { workspace = true }
regex = "1.10"
chrono = { version = "0.4", features = ["clock", "std"] }
opener = "0.6"
sha2 = "0.10"
hex = "0.4"
mime_guess = "2.0"
toml = "0.8"
arboard = { version = "3.3", optional = true }
unicode-width = "0.1"

[features]
default = ["clipboard"]
clipboard = ["arboard"]

[dev-dependencies]
tempfile = "3.8"

